--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc",
-    "build": "tsc",
-    "test:watch": "jest --watch"
+    "build": "tsc"
   },
   "author": "Michael Adamson",
   "license": "ISC",
@@ -15,8 +14,7 @@
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
+    "typescript": "^5.9.3"
   },
   "type": "module"
 }
