--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc",
-    "build": "tsc"
+    "dev": "ts-node-dev --respawn src/run.ts",
+    "start": "ts-node src/run.ts"
   },
   "author": "Michael Adamson",
   "license": "ISC",
@@ -14,7 +15,7 @@
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
-  },
-  "type": "module"
+  }
 }
