accept user input

--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc",
-    "dev": "ts-node-dev --respawn src/run.ts",
-    "start": "ts-node src/run.ts"
+    "dev": "tsx watch src/run.ts",
+    "start": "tsx src/run.ts"
   },
   "author": "Michael Adamson",
   "license": "ISC",
   "keywords": [],
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.9",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
